--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,346 @@
-/* место для вашего кода */
+html {
+  scroll-behavior: smooth;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  padding: 92px 50px;
+}
+
+.header__menu {
+  
+  align-self: center;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 33px;
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.13px;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  justify-self: center;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+}
+
+.address {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24.3px;
+  letter-spacing: 0.01em;
+}
+
+.header__address {
+  justify-self: end;
+  align-self: center;
+  padding-right: 35px;
+}
+
+.address address {
+  font-style: normal;
+}
+
+/* начало входной секции */
+
+.cover {
+  position: relative;
+  z-index: -1;
+  padding: 160px 50px 52px 50px;
+  background-image: url(/images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background: rgb(0, 0, 0, 0.6);
+}
+
+.cover__title {
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  color: #FFF;
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 127px;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+
+}
+
+.aligned-text_center {
+  padding-right: 30px;
+  letter-spacing: 30px;
+  text-align: center;
+}
+
+.aligned-text_right {
+  line-height: 113px;
+  text-align: right;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 127px;
+}
+
+.cover__description-text {
+  align-self: center;
+  padding-left: 27px;
+  color: #fff;
+  font-weight: 300;
+  font-size: 22px;
+  letter-spacing: 0;
+  text-align: left;
+  text-transform: uppercase;
+  word-spacing: 19px;
+
+}
+
+.bet-button {
+  width: 256px;
+  height: 51px;
+  border: 1px solid #FFF;
+  color: #FFF;
+  font-size: 22px;
+  text-transform: uppercase;
+  background-color: transparent;
+
+
+}
+
+/* конец входной секции */
+
+/* начало секции с карточками */
+
+.lots {
+  margin-top: 179px;
+  margin-right: 25px;
+  margin-left: 25px;
+
+}
+
+.lots__heading {
+  padding-left: 40px;
+  color: #000;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 24px;
+  margin-top: 25px;
+  margin-bottom: 29px;
+  list-style: none;
+}
+
+.lots__card-list-item {
+  flex-grow: 1;
+  width: 334px;
+  min-height: 563px;
+}
+
+.card-link {
+  display: block;
+  height: 100%;
+  text-decoration: none;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  padding: 50px 40px;
+}
+
+.card_type_film {
+  position: relative;
+  z-index: -1;
+  background-image: url(/images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.card_type_book {
+  position: relative;
+  z-index: -1;
+  background-image: url(/images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.card_type_picture {
+  position: relative;
+  z-index: -1;
+  background-image: url(/images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.card__title {
+  color: #fff;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 26.4px;
+  text-align: left;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  color: #FFF;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: left;
+}
+
+.lots__look-more-link {
+  margin-top: 5px;
+  margin-left: 40px;
+  font-size: 20px;
+  
+}
+
+/* конец секции с карточками */
+
+/* начало секции об аукционе */
+
+.about {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas:
+      "logo about about"
+      ". about about";
+  gap: 25px;
+  margin-top: 182px;
+  margin-right: 25px;
+  margin-left: 25px;
+}
+
+.logo__column {
+  display: flex;
+  grid-area: logo;
+  justify-content: center;
+}
+
+.text__column {
+  grid-area: about;
+  padding-top: 101px;
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 130px;
+  background-color: #000;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  padding-bottom: 100px;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.01em;
+}
+
+.about__text-top {
+  margin-bottom: 24px;
+}
+
+/* конец секции об аукционе */
+
+/* начало подвала */
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 180px;
+  margin-right: 50px;
+  margin-left: 50px;
+}
+
+.menu {
+  padding-left: 35px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.13px;
+  text-align: center;
+  
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__menu-list {
+  list-style: none;
+}
+
+.footer__social-list {
+  display: flex;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-list-item {
+  width: 48px;
+  height: 48px;
+}
+
+/* конец подвала */
