--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@ html {
   position: relative;
   z-index: -1;
   padding: 160px 50px 52px 50px;
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -197,7 +197,7 @@ html {
 .card_type_film {
   position: relative;
   z-index: -1;
-  background-image: url(/images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -206,7 +206,7 @@ html {
 .card_type_book {
   position: relative;
   z-index: -1;
-  background-image: url(/images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -215,7 +215,7 @@ html {
 .card_type_picture {
   position: relative;
   z-index: -1;
-  background-image: url(/images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -315,8 +315,7 @@ html {
   display: flex;
   justify-content: space-between;
   margin-top: 180px;
-  margin-right: 50px;
-  margin-left: 50px;
+  padding: 0 50px 88px 50px;
 }
 
 .menu {
