--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,12 @@ html {
   padding-right: 35px;
 }
 
-.address address {
+.address {
+  display: flex;
+  flex-direction: column;
+}
+
+.address p {
   font-style: normal;
 }
 
@@ -67,7 +72,6 @@ html {
 
 .cover {
   position: relative;
-  z-index: -1;
   padding: 160px 50px 52px 50px;
   background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
@@ -78,11 +82,12 @@ html {
 .overlay {
   position: absolute;
   inset: 0;
-  z-index: -1;
+  z-index: 0;
   background: rgb(0, 0, 0, 0.6);
 }
 
 .cover__title {
+  position: relative;
   z-index: 1;
   display: flex;
   flex-direction: column;
@@ -116,6 +121,8 @@ html {
 }
 
 .cover__description {
+  position: relative;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   margin-top: 127px;
@@ -139,6 +146,7 @@ html {
   height: 51px;
   border: 1px solid #FFF;
   color: #FFF;
+  font-family: Raleway, sans-serif;
   font-size: 22px;
   text-transform: uppercase;
   background-color: transparent;
@@ -187,41 +195,33 @@ html {
 }
 
 .card {
+  position: relative;
+  z-index: -1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
   padding: 50px 40px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
 .card_type_film {
-  position: relative;
-  z-index: -1;
-  background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
+  background-image: url('../images/card-lot-01.jpg');
 }
 
 .card_type_book {
-  position: relative;
-  z-index: -1;
-  background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
+  background-image: url('../images/card-lot-02.jpg');
 }
 
 .card_type_picture {
-  position: relative;
-  z-index: -1;
-  background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
+  background-image: url('../images/card-lot-03.jpg');
 }
 
 .card__title {
+  position: relative;
+  z-index: 1;
   color: #fff;
   font-weight: 700;
   font-size: 22px;
@@ -232,6 +232,8 @@ html {
 }
 
 .card__text {
+  position: relative;
+  z-index: 1;
   color: #FFF;
   font-weight: 400;
   font-size: 20px;
